--- a/views/index.hbs
+++ b/views/index.hbs
@@ -114,7 +114,7 @@
                     {{#each rows}}
                 <div class="col"> <a id="1bed" href=""><img class="img-thumbnail" src="photos/room1.jpg" alt="room1" style="width: 600px; height:200px;" ></a>
                    <label id="1bed">{{this.Name}}</label> </br>
-                   <label id="1bed">{{this.Price}}</label>
+                   <label id="1bed">{{this.ID}}</label>
                 </div>
                 {{!-- <div class="col"><a id="2bed" href=""><img class="img-thumbnail" src="photos/room2.jpg" alt="room2" style="width:600px; height:200px;"></a>
                                  <label id="2bed">One bed</label>
