--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,8 +9,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    {{!-- <link rel="stylesheet" href="../public/css/main.css">
-    <script src="script.js"></script> --}}
+    <link rel="stylesheet" href="css/main.css">
+    <script src="script.js"></script>
     <title>NITC GUEST MANAGEMENT</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
         <nav class="navbar bg-transparent navbar-expand-lg navbar-light fixed-top">
             
             <div class="container-fluid">
-                <a class="navbar-brand"><img src="../public/images/logo.jpg" alt="logo" width="80" height="80"></a>
+                <a class="navbar-brand"><img src="images/logo.jpg" alt="logo" width="80" height="80"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,7 +40,7 @@
                 <div class="collapse navbar-collapse nav justify-content-end" id="#navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" onclick="document.getElementById('id01').style.display='block'" style="width:auto;" aria-current="page"><img src="../public/images/login.png" alt="Login" width="35" height="35"></a>
+                            <a class="nav-link active" onclick="document.getElementById('id01').style.display='block'" style="width:auto;" aria-current="page"><img src="public/images/login.png" alt="Login" width="35" height="35"></a>
                         </li>
                     </ul>
                 </div>
@@ -112,17 +112,17 @@
         <div class="container">
             <div class="row row-cols-2 row-cols-lg-4">
                     {{#each rows}}
-                <div class="col"> <a id="1bed" href=""><img class="img-thumbnail" src="../public/images/room1.jpg" alt="room1" style="width: 600px; height:200px;" ></a>
+                <div class="col"> <a id="1bed" href=""><img class="img-thumbnail" src="images/room1.jpg" alt="room1" style="width: 600px; height:200px;" ></a>
                    <label id="1bed">{{this.Name}}</label> </br>
-                   <label id="1bed">{{this.ID}}</label>
+                   <label id="1bed">{{this.Price}}</label>
                 </div>
-                {{!-- <div class="col"><a id="2bed" href=""><img class="img-thumbnail" src="../public/images/room2.jpg" alt="room2" style="width:600px; height:200px;"></a>
+                {{!-- <div class="col"><a id="2bed" href=""><img class="img-thumbnail" src="images/room2.jpg" alt="room2" style="width:600px; height:200px;"></a>
                                  <label id="2bed">One bed</label>
                 </div>
-                <div class="col"><a  id="" href=""><img class="img-thumbnail" src="../public/images/room3.jpg" alt="room3" style="width: 600px; height:200px;"></a>
+                <div class="col"><a  id="" href=""><img class="img-thumbnail" src="images/room3.jpg" alt="room3" style="width: 600px; height:200px;"></a>
                                  <label id="1bed">One bed</label>
                 </div>
-                <div class="col"><a id="" href=""><img class="img-thumbnail" src="../public/images/room4.jpg" alt="room4"  style="width:600px; height:200px;"> </a>
+                <div class="col"><a id="" href=""><img class="img-thumbnail" src="images/room4.jpg" alt="room4"  style="width:600px; height:200px;"> </a>
                                  <label id="1bed">One bed</label>
                 </div> --}}
                 {{/each}}
