--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,16 +38,28 @@
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse nav justify-content-end" id="#navbarNavDropdown">
+                    {{#if removedUser}}
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" onclick="document.getElementById('id01').style.display='block'" style="width:auto;" aria-current="page"><img src="public/images/login.png" alt="Login" width="35" height="35"></a>
+                            <a class="nav-link active"  href="/logout" style="width:auto;" aria-current="page">Hello {{this.removedUser}} </br>Logout</a>
                         </li>
                     </ul>
+                {{else}}
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/user" style="width:auto;" aria-current="page"><img src="images/login.png" alt="Login" width="35" height="35"></a>
+                        </li>
+                    </ul>
+                {{/if}}
                 </div>
             </div>
+
         </nav>
+
+
+
     <!-- </section> -->
-    <div id="id01" class="modal">
+    {{!-- <div id="id01" class="modal">
         <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
         <form class="modal-content animate" action="/action_page.php">
             <div class="container">
@@ -66,7 +78,7 @@
                 </div>
             </div>
         </form>
-    </div>
+    </div> --}}
  
 <br>
     <br>
@@ -112,7 +124,7 @@
         <div class="container">
             <div class="row row-cols-2 row-cols-lg-4">
                     {{#each rows}}
-                <div class="col"> <a id="1bed" href=""><img class="img-thumbnail" src="images/room1.jpg" alt="room1" style="width: 600px; height:200px;" ></a>
+                <div class="col"> <a id="1bed" href=""><img class="img-thumbnail" src="images/{{this.Imagepath}}.jpg" alt="room1" style="width: 600px; height:200px;" ></a>
                    <label id="1bed">{{this.Name}}</label> </br>
                    <label id="1bed">{{this.Price}}</label>
                 </div>
