--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,6 +16,47 @@
 <body>
     <!-- nav bar -->
     <section id="date_select">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <nav class="navbar navbar-inverse navbar-expand-lg navbar-fixed-top">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span class="sr-only"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>                        
+                </button>
+                 <a class="navbar-brand" href="#"></a> 
+              </div>
+              <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+                {{!-- <ul class="nav navbar-nav navbar-right">
+                  <li><a href="user"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                </ul> --}}
+                {{#if removedUser}}
+                    <ul class="nav navbar-nav navbar-right">
+                        
+                        <li><span >hello {{this.removedUser}}</br><a href="/logout" style="width:auto;" aria-current="page">Logout</a></span>
+                        </li>
+                    </ul>
+                {{else}}
+                    <ul class="nav navbar-nav navbar-right">
+             
+                        <li><a href="user"><span class="glyphicon glyphicon-user"></span> Login /SignUp</a>
+                        </li>
+                        
+                    </ul>
+                {{/if}}
+              </div>
+            </div>
+          </nav>
+    
+<!--     
+    <section id="date_select">
         <nav class="navbar bg-transparent navbar-expand-lg navbar-light fixed-top">
             
             <div class="container-fluid">
@@ -38,25 +79,25 @@
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse nav justify-content-end" id="#navbarNavDropdown">
-                    {{#if removedUser}}
-                    <ul class="navbar-nav">
+                    <!-- {{#if removedUser}} -->
+                    <!-- <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active"  href="/logout" style="width:auto;" aria-current="page">Hello {{this.removedUser}} </br>Logout</a>
                         </li>
                     </ul>
-                {{else}}
-                    <ul class="navbar-nav">
+                    <!-- {{else}} -->
+                    <!-- <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" href="/user" style="width:auto;" aria-current="page"><img src="images/login.png" alt="Login" width="35" height="35"></a>
                         </li>
-                    </ul>
-                {{/if}}
-                </div>
+                    </ul> -->
+                <!--{{/if}} -->
+                <!-- </div>
             </div>
 
-        </nav>
+        </nav> -->
 
-
+ -->
 
     <!-- </section> -->
     {{!-- <div id="id01" class="modal">
