FOlder For Temporary Files

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,7 +40,7 @@
                 {{#if removedUser}}
                     <ul class="nav navbar-nav navbar-right">
                         
-                        <li><span >hello {{this.removedUser}}</br><a href="/logout" style="width:auto;" aria-current="page">Logout</a></span>
+                        <li><span>{{this.removedUser}}&nbsp; &nbsp;</br><a href="/logout" style="width:auto;" aria-current="page">Logout</a></span>
                         </li>
                     </ul>
                 {{else}}
