--- a/views/user.hbs
+++ b/views/user.hbs
@@ -11,7 +11,7 @@
   <title>LOGIN SIGN UP</title>
 </head>
 <!--#CDF0EA-->
-<body style="background-color:black; background:url(images/background.jpg);">
+<body style="background-color:rgba(53, 49, 49, 0.507);">
 
   <div class="row">
     <div class="col-md-6 mx-auto p-0">
