--- a/views/user.hbs
+++ b/views/user.hbs
@@ -12,6 +12,13 @@
 </head>
 <!--#CDF0EA-->
 <body style="background-color:rgba(53, 49, 49, 0.507);">
+    
+  {{#if removedUser}}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  User has been removed.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{{/if}}
 
   <div class="row">
     <div class="col-md-6 mx-auto p-0">
