Admin login updated

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -4,57 +4,39 @@
   	<title>Admin Login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
 	<link rel="stylesheet" href="css/style.css">
 
 	</head>
-	<body class="img js-fullheight" style="background-image: url(images/bg.jpg);">
-	<section class="ftco-section">
-		<div class="container">
-			<div class="row justify-content-center"></div>
-			<div class="row justify-content-center">
-				<div class="col-md-6 col-lg-4">
-					<div class="login-wrap p-0">
-		      	<h3 class="mb-4 text-center">Admin Login</h3>
-		      	<form action="/admin" method="POST" class="signin-form">
-		      		<div class="form-group">
-		      			<input type="text" name="email" class="form-control" placeholder="Username" required>
-		      		</div>
-	            <div class="form-group">
-	              <input id="password-field" name="pass" type="password" class="form-control" placeholder="Password" required>
-	              <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
-	            </div>
-	            <div class="form-group">
-	            	<button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
-	            </div>
-	            <div class="form-group d-md-flex">
-	            	
-					<div class="w-50 text-md-right">
-							<a href="#" style="color: #fff">Forgot Password</a>
-					</div>
-	            </div>
-	          </form>
-		      </div>
-				</div>
+  <body>
+  	<div>
+  		<div class="row row-cols-1 row-cols-lg-2">
+				<div class="col"><img src="images/adminphoto.webp" style="width:50%; height:600px;  top:-199px; left:720px;" alt="cake"></div>
+			<div class="col">
+				<h3 class="mb-4 text-center" style="margin-top: 170px;">Admin Login</h3>
+					<form action="/admin" method="POST" class="signin-form " style="width: 300px; height: 150px; margin-left:150px">
+						<div class="form-group">
+							<input type="text" name="email" class="form-control" placeholder="Username" required>
+						</div>
+						<br>
+						<div class="form-group">
+							<input id="password-field" name="pass" type="password" class="form-control" placeholder="Password" required>
+						</div>
+						<br>
+						<div class="form-group">
+							<button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
+						</div>
+					</form>
+				</div> 
 			</div>
-		</div>
-	</section>
-
-	<!-- <script src="js/jquery.min.js"></script>
-  <script src="js/popper.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script> -->
-
-	</body>
+	</div>
+</body>
 </html>
 
