--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
 </head>
 <body style="font-family: 'Roboto Slab', serif;">
   <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.jpg" alt="logo" style="width: 50px; height: 50px; border-radius: 50%;"></a>
@@ -39,9 +39,20 @@
                     <a class="nav-link" href="#">Contact</a>
                   </li>
                 </ul>
-                <ul class="navbar-nav ms-auto">
-                    <button class="btn btn-primary"><img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">Login</button> 
-                </ul>
+                 {{#if removedUser}}
+                    <ul class="navbar-nav ms-auto">
+                          <button class="btn btn-primary" type="button">
+                            <img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">
+                            <a href="/logout" style="width:auto; text-decoration: none; color:white;" aria-current="page"> Logout</a></button>
+                    </ul>
+                {{else}}
+                    <ul class="navbar-nav ms-auto">
+                        <button class="btn btn-primary" type="button">
+                          <img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">
+                          <a href="user" style="text-decoration: none; color:white ;">Login</a></button> 
+                    </ul>
+                {{/if}}
+
               </div>
             </div>
           </nav>
