--- a/views/manage.hbs
+++ b/views/manage.hbs
@@ -32,6 +32,12 @@
             <div class="sidebar-wrapper">
                 <ul class="nav">
                     <li>
+                        <a class="nav-link" href="/manage?type=dashboard">
+                            {{!-- <i class="nc-icon nc-circle-09"></i> --}}
+                            <p>Dashboard</p>
+                        </a>
+                    </li>
+                    <li>
                         <a class="nav-link" href="/manage?type=managers">
                             <i class="nc-icon nc-circle-09"></i>
                             <p>Manager</p>
@@ -103,8 +109,12 @@
                         <div class="col-md-12">
                             <div class="card card-plain table-plain-bg">
                                 <div class="card-header ">
-                                    <h4 class="card-title">{{nm}} Table</h4>
-                                    <p class="card-category">Details of the {{nm}} </p>
+                                    {{#ifNotEquals nm "Dashboard"}}
+                                         <h4 class="card-title">{{nm}} Table</h4>
+                                        <p class="card-category">Details of the {{nm}} </p>
+                                    {{/ifNotEquals}}
+
+                                     
                                 </div>
                                 <div class="card-body table-full-width table-responsive">
                                     <table class="table table-hover">
