--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -20,7 +20,7 @@
   		<div class="row row-cols-1 row-cols-lg-2">
 				<div class="col"><img src="images/adminphoto.webp" style="width:620px; height:600px;  top:-199px; left:720px;" alt="cake"></div>
 			<div class="col">
-				<h3 class="mb-4 text-center" style="margin-top: 170px;">Admin Login</h3>
+				<h3 class="mb-4 text-center" style="margin-top: 170px;">Admin Login/Signup</h3>
 					<form action="/admin" method="POST" class="signin-form " style="width: 300px; height: 150px; margin-left:150px">
 						<div class="form-group">
 							<input type="text" name="email" class="form-control" placeholder="Username" required>
