--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
 	<link rel="stylesheet" href="css/style.css">
-
+     {{!-- changes cyuvblk;l'kjlgjghdh --}}
 	</head>
   <body>
   	<div>
