--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -13,14 +13,13 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
 	<link rel="stylesheet" href="css/style.css">
-     {{!-- changes cyuvblk;l'kjlgjghdh --}}
 	</head>
   <body>
   	<div>
   		<div class="row row-cols-1 row-cols-lg-2">
 				<div class="col"><img src="images/adminphoto.webp" style="width:620px; height:600px;  top:-199px; left:720px;" alt="cake"></div>
 			<div class="col">
-				<h3 class="mb-4 text-center" style="margin-top: 170px;">Admin Login/Signup</h3>
+				<h3 class="mb-4 text-center" style="margin-top: 170px;">Admin Login</h3>
 					<form action="/admin" method="POST" class="signin-form " style="width: 300px; height: 150px; margin-left:150px">
 						<div class="form-group">
 							<input type="text" name="email" class="form-control" placeholder="Username" required>
