--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,6 +59,10 @@
     </header>
     
     <div id="booking" class="section">
+                <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                      <strong style="text-align: center;">Holy guacamole!</strong> You should check in on some of those fields below.
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
 		<div class="section-center">
 			<div class="container">
 				<div class="row">
