--- a/views/rooms.hbs
+++ b/views/rooms.hbs
@@ -18,10 +18,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 	<!-- Bootstrap -->
-	<link type="text/css" rel="stylesheet" href="../public/css/bootstrap.min.css" />
+	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 
 	<!-- Custom stlylesheet -->
-	<link  rel="stylesheet" href="../public/css/book.css" />
+	<link  rel="stylesheet" href="css/book.css" />
 
 </head>
 <body>
