--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,10 +59,26 @@
     </header>
     
     <div id="booking" class="section">
-                <div class="alert alert-primary alert-dismissible fade show" role="alert">
-                      <strong style="text-align: center;">Holy guacamole!</strong> You should check in on some of those fields below.
+                {{#ifEquals value "login"}}
+                        <div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+                      Hello<strong> {{removedUser}}</strong>, you have logged in succesfully!
                       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-              </div>
+                  </div>
+                {{/ifEquals}}
+
+                {{#ifEquals value "logout"}}
+                        <div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+                       <strong> {{removedUser}}</strong> You have been logged out succesfully!
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                {{/ifEquals}}
+
+                {{#ifEquals value "signup"}}
+                        <div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+                       Hey <strong> {{removedUser}}</strong>, you have signed up succesfully!
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                {{/ifEquals}}
 		<div class="section-center">
 			<div class="container">
 				<div class="row">
@@ -162,7 +178,7 @@
         <div class="container">
             <div class="row row-cols-2 row-cols-lg-4">
                     {{#each rows}}
-                <div class="col"> <a id="1bed" href=""><img class="img-thumbnail" src="images/{{this.Imagepath}}.jpg" alt="room1" style="width: 600px; height:200px; border-radius:10%;" ></a>
+                <div class="col"> <a id="1bed" href="/rooms"><img class="img-thumbnail" src="images/{{this.Imagepath}}.jpg" alt="room1" style="width: 600px; height:200px; border-radius:10%;" ></a>
                    <label id="1bed"><strong>{{this.Name}}</strong></label> </br>
                    <label id="1bed"><strong>{{this.Price}}</strong></label>
                 </div>
@@ -174,17 +190,17 @@
     {{!-- slideshow --}}
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" style="margin: 78px;">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="500">
-            <img src="images/3.png" class="d-block w-100" alt="..." style="height:300px">
+          <div class="carousel-item active" data-interval="100">
+            <img src="images/3.png" class="d-block w-100 rounded" alt="..." style="height:300px">
           </div>
-          <div class="carousel-item" data-interval="500">
-            <img src="images/2.jpg" class="d-block w-100" alt="..." style="height:300px">
+          <div class="carousel-item" data-interval="100">
+            <img src="images/2.jpg" class="d-block w-100 rounded" alt="..." style="height:300px">
           </div>
-          <div class="carousel-item" data-interval="500">
-            <img src="images/1.png" class="d-block w-100" alt="..." style="height:300px">
+          <div class="carousel-item" data-interval="100">
+            <img src="images/1.png" class="d-block w-100 rounded" alt="..." style="height:300px">
           </div>
-          <div class="carousel-item" data-interval="500">
-            <img src="images/4.jpg" class="d-block w-100" alt="..." style="height:300px">
+          <div class="carousel-item" data-interval="100">
+            <img src="images/4.jpg" class="d-block w-100 rounded" alt="..." style="height:300px">
           </div>
         </div>
       </div>
