--- a/views/rooms.hbs
+++ b/views/rooms.hbs
@@ -24,118 +24,104 @@
 	<link  rel="stylesheet" href="../public/css/book.css" />
 
 </head>
-<body>
-	<div id="booking" class="section">
-		<div class="section-center">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-7 col-md-push-5">
-						<div class="booking-cta">
-							<h1>Make your reservation</h1>
-							<table class="table">
-								<thead>
-									<th>Hostels</th>
-									<th>Room</th>
-									<th>Amount</th>
-								</thead>
-								<tr>
-									<td><strong>International Hostel</strong></td>
-									<td><strong>3 bedded</strong></td>
-									<td><strong>450/day</strong></td>			
-								</tr>
-								<tr>
-									<td><strong>G Hostel</strong></td>
-									<td><strong>2 bedded</strong></td>
-									<td><strong>250/day</strong></td>			
-								</tr>
-								<tr>
-									<td><strong>PG-2</strong></td>	
-									<td><strong>2 bedded</strong></td>
-									<td><strong>250/day</strong></td>			
-								</tr>
-								<tr>
-									<td><strong>SAC</strong></td>					
-									<td><strong>2 bedded</strong></td>
-									<td><strong>250/day</strong></td>			
-								</tr>
-							</table>
-						</div>
-					</div>
-					<div class="col-md-4 col-md-pull-7">
-						<div class="booking-form">
-							<form>
-								<div class="row">
-									<div class="col-sm-6">
-										<div class="form-group">
-											<span class="form-label">Check In</span>
-											<input class="form-control" type="date" required>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="form-group">
-											<span class="form-label">Check out</span>
-											<input class="form-control" type="date" required>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm-6">
-										<div class="form-group">
-											<span class="form-label">Rooms</span>
-											<select class="form-control">
-												<option>No. of rooms</option>
-												<option>1</option>
-												<option>2</option>
-												<option>3</option>
-												<option>4</option>
-												
-											</select>
-											<span class="select-arrow"></span>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="form-group">
-											<span class="form-label">Guest count</span>
-											<select class="form-control">
-												<option>No. of guests</option>
-												<option>1</option>
-												<option>2</option>
-												<option>3</option>
-												<option>4</option>
-												<option>5</option>
-											</select>
-											<span class="select-arrow"></span>
-										</div>
-									</div>
-									
-										<div class="col-sm-8">
-											<div class="form-group">
-												<span class="form-label">Room Type</span>
-												
-													<select class="form-control">
-													<option>Select the hostel</option>
-													<option>G HOSTEL</option>
-													<option>PG 2</option>
-													<option>SAC</option>
-													<option>INTERNATIONAL HOSTEL</option>
-												</select>
-											
-												<span class="select-arrow"></span>
-											</div>
-										</div>
-									
-								</div>
-								<div class="form-btn">
-									<center><button class="submit-btn">Check availability</button></center>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<br>
+	<body style="background-color: rgba(47, 103, 177, 0.6);">
+    <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="images/logo.jpg" alt="logo" style="width: 50px; height: 50px; border-radius: 50%;"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Rooms</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <button class="btn btn-primary"><img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">Login</button> 
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+  
+    <section>
+      <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="room3.jpg" class="img-fluid rounded-start" style="width:100%" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h2 class="card-title">INTERNATIONAL HOTEL</h2>
+              <h3>3 BEDDED</h3>
+              <h4>450 per day</h4>
+              <br>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam aliquam placeat dolores quia aspernatur voluptatem accusantium perspiciatis dolorem error fuga tenetur quisquam atque aut saepe, magnam modi voluptatibus nostrum temporibus architecto in, consequuntur earum! Optio praesentium, ut beatae recusandae facilis tenetur, fugiat itaque sed natus odit eaque voluptatibus ex nisi?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="room3.jpg" class="img-fluid rounded-start" style="width:100%" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h2 class="card-title">G-HOSTEL</h2>
+              <h3>2 BEDDED</h3>
+              <h4>250 per day</h4>
+              <br>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptatum nobis in tempora tenetur labore eius unde repudiandae, illo porro eum nesciunt impedit mollitia ratione ad beatae soluta provident odio nihil, facilis enim laboriosam? Dolor quia voluptas fuga! Eum natus ratione repudiandae, corporis eveniet quidem mollitia molestiae velit labore? Sequi.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="room3.jpg" class="img-fluid rounded-start" style="width:100%" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h2 class="card-title">PG-2</h2>
+              <h3>2 BEDDED</h3>
+              <h4>250 per day</h4>
+              <br>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, perferendis. Perspiciatis ipsam animi molestias saepe sed eveniet unde nam, cum, nisi dolore reprehenderit corporis repellat non sequi ad hic at. Doloremque excepturi perspiciatis, error ipsum laudantium, quos non placeat necessitatibus cupiditate odio saepe earum, sed hic sit veritatis illum repellat?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="room3.jpg" class="img-fluid rounded-start" style="width:100%" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h2 class="card-title">SAC</h2>
+              <h3>2 BEDDED</h3>
+              <h4>250 per day</h4>
+              <br>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum vitae id, laborum, esse repellendus quos quis aspernatur numquam consequuntur eius tempore enim dolor deserunt officiis! Iste ducimus illo obcaecati odio maxime consequuntur voluptatem maiores ut quibusdam laborum, nisi, in, molestias voluptas assumenda voluptates nihil quas. Odio laboriosam autem illo voluptas!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 </body>
-
 </html>
