--- a/views/user.hbs
+++ b/views/user.hbs
@@ -11,7 +11,7 @@
   <title>LOGIN SIGN UP</title>
 </head>
 <!--#CDF0EA-->
-<body style="background-color:rgba(53, 49, 49, 0.507);">
+<body>
     
   {{#if removedUser}}
 <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -20,41 +20,45 @@
 </div>
 {{/if}}
 
-  <div class="row">
-    <div class="col-md-6 mx-auto p-0">
-        <div class="card">
-            <div class="login-box">
-                <form  method="POST" action="/user" novalidate>
-                <div class="login-snip"> <input id="tab-1" type="radio" name="tab" class="sign-in" value="0" checked><label for="tab-1" class="tab">Login</label> <input id="tab-2" type="radio" value="1" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
-                    <div class="login-space">
-                        <div class="login">
-                            {{!-- <form  method="POST" action="/user" novalidate> --}}
-                            <!-- <div class="group"> <label for="user" class="label">Username</label> <input id="user" type="text" class="input" placeholder="Enter your username"> </div> -->
-                            <div class="group"> <label for="user" class="label">Roll Number</label> <input id="roll" name="rno" type="text" class="input" placeholder="Enter your roll number"> </div>
-                                <div class="group"> <label for="pass" class="label">Password</label> <input id="pass" name="pass" type="password" class="input" data-type="password" placeholder="Enter your password"> </div>
-                                <div class="group"> <input id="check" type="checkbox" class="check" checked> <label for="check"><span class="icon"></span> Keep me Signed in</label> </div>
-                                <div class="group"> <input type="submit" class="button" value="Sign In"> </div>
-                                <div class="hr"></div>
-                            {{!-- </form> --}}
-                                {{!-- <div class="foot"> <a href="#">Forgot Password?</a> </div> --}}
-                            </div>
-                        <div class="sign-up-form">
-                        {{!-- <form  method="POST" action="/user" novalidate> --}}
-                            <div class="group"> <label for="user" class="label">Name</label> <input id="user" name="name" type="text" class="input" placeholder="Create your Username"> </div>
-                            <div class="group"> <label for="user" class="label">Roll Number</label> <input id="roll" name="rno" type="text" class="input" placeholder="Enter your roll number"> </div>
-                            <div class="group"> <label for="pass" class="label">Password</label> <input id="pass" name="pass" type="password" class="input" data-type="password" placeholder="Create your password"> </div>
-                            <div class="group"> <label for="pass" class="label">Repeat Password</label> <input id="pass" name="rpass" type="password" class="input" data-type="password" placeholder="Repeat your password"> </div>
-                            <div class="group"> <label for="pass" class="label">Email Address</label> <input id="pass" name="email" type="text" class="input" placeholder="Enter your email address"> </div>
-                            <div class="group"> <input type="submit" class="button" value="Sign Up" style="margin-top: 20px;"> </div>
-                            <div class="hr"></div>
-                        {{!-- </form> --}}
-                        </div>
-                    </div>
-                </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+  <!--<div class="row">-->
+      <div>
+          <div class="row row-cols-1 row-cols-lg-2">
+              <div class="col"><img src="images/adminphoto.webp" style="width:100%; height:120%; " alt="campus"></div>
+              <div class="col">
+                  <!--<div class="col-md-6 mx-auto p-0">-->
+                      <!--<div class="card">-->
+                          <div class="login-box">
+                              <form method="POST" action="/user" novalidate>
+                                  <div class="login-snip">
+                                      <input id="tab-1" type="radio" name="tab" class="sign-in" value="0" checked><label for="tab-1" class="tab">Login</label> <input id="tab-2" type="radio" value="1" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+                                      <div class="login-space">
+                                          <div class="login">
+                                              {{!-- <form  method="POST" action="/user" novalidate> --}}
+                                              <!-- <div class="group"> <label for="user" class="label">Username</label> <input id="user" type="text" class="input" placeholder="Enter your username"> </div> -->
+                                              <div class="group"> <label for="user" class="label">Roll Number</label> <input id="roll" name="rno" type="text" class="input" placeholder="Enter your roll number"> </div>
+                                              <div class="group"> <label for="pass" class="label">Password</label> <input id="pass" name="pass" type="password" class="input" data-type="password" placeholder="Enter your password"> </div>
+                                              <div class="group"> <input id="check" type="checkbox" class="check" checked> <label for="check"><span class="icon"></span> Keep me Signed in</label> </div>
+                                              <div class="group"> <input type="submit" class="button" value="Sign In"> </div>
+                                              {{!-- </form> --}}
+                                              {{!-- <div class="foot"> <a href="#">Forgot Password?</a> </div> --}}
+                                          </div>
+                                          <div class="sign-up-form">
+                                              {{!-- <form  method="POST" action="/user" novalidate> --}}
+                                              <div class="group"> <label for="user" class="label">Name</label> <input id="user" name="name" type="text" class="input" placeholder="Create your Username"> </div>
+                                              <div class="group"> <label for="user" class="label">Roll Number</label> <input id="roll" name="rno" type="text" class="input" placeholder="Enter your roll number"> </div>
+                                              <div class="group"> <label for="pass" class="label">Password</label> <input id="pass" name="pass" type="password" class="input" data-type="password" placeholder="Create your password"> </div>
+                                              <div class="group"> <label for="pass" class="label">Email Address</label> <input id="pass" name="email" type="text" class="input" placeholder="Enter your email address"> </div>
+                                              <div class="group"> <input type="submit" class="button" value="Sign Up" style="margin-top: 20px;"> </div>
+                                              {{!-- </form> --}}
+                                          </div>
+                                      </div>
+                                  </div>
+                              </form>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          <!-- </div> 
+          </div>-->
 </body>
 </html>
