--- a/public/css/main.css
+++ b/public/css/main.css
@@ -102,7 +102,6 @@ USER LOGIN SIGNUP */
 .login-space .group .input,
 .login-space .group .button {
     width: 100%;
-    color: #fff;
     display: block
 }
 
@@ -111,7 +110,7 @@ USER LOGIN SIGNUP */
     border: none;
     padding: 15px 20px;
     border-radius: 25px;
-    background: rgba(255, 255, 255, .1)
+    background: #fff
 }
 
 .login-space .group input[data-type="password"] {
@@ -224,3 +223,11 @@ a {
 ::placeholder {
     color: black
 }
+
+/*BOOKING PAGE CSS*/
+
+.container {
+    max-width: 960px;
+  }
+  
+  .lh-condensed { line-height: 1.25; }
