--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -34,6 +34,13 @@
 						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 					</div>
 				{{/ifEquals}}
+
+				{{#ifEquals errcode "logout"}}
+							<div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+						<strong> {{x}}</strong> You have logged out successfully!
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+					</div>
+				{{/ifEquals}}
 					<form action="/admin" method="POST" class="signin-form " style="width: 300px; height: 150px; margin-left:150px">
 						<div class="form-group">
 							<input type="text" name="email" class="form-control" placeholder="Username" required>
