--- a/views/adminUpdateForm.hbs
+++ b/views/adminUpdateForm.hbs
@@ -2,11 +2,201 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="apple-touch-icon" sizes="76x76" href=" assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href=" assets/img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    <!-- CSS Files -->
+    <link href=" assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href=" assets/css/light-bootstrap-dashboard.css?v=2.0.0 " rel="stylesheet" />
     <title>ADMIN UPDATE FORM</title>
 </head>
 <body>
-    admin Update form
+    
+    <div class="card card-plain table-plain-bg">
+         <div class="card-header ">
+                <h2 class="card-title">{{tname}} Table</h2>
+                <h3 class="card-category">Edit {{tname}} </h3>
+            </div>
+    </div>
+
+    {{!-- {{#ifEquals tname "Users"}} --}}
+    {{!-- 1{{this}}<br>
+    2{{this.this}}<br>
+    3{{rows.ID}}<br>
+    {{!-- 4{{rows[0]}}<br> --}}
+    5{{./ID}}<br> 
+    {{#if this.RollNo}}
+
+    {{!-- coulmnArray = ['ID','Name','RollNo','Email','Password','status']; --}}
+        <form>
+            <div class="row">
+                <div class="mb-3 col-3">
+                    <label for="disabledTextInput" class="form-label">ID</label>
+                    <input type="text" id="disabledTextInput" class="form-control" value="{{ID}}" disabled>
+                </div>
+                <div class="mb-3 col-3">
+                    <label for="disabledTextInput" class="form-label">NAME</label>
+                    <input type="text" id="disabledTextInput" class="form-control" value="{{Name}}">
+                </div>
+            </div>
+            <div class="row">
+                <div class="mb-3 col-3">
+                    <label for="disabledTextInput" class="form-label">RollNo</label>
+                    <input type="text" id="disabledTextInput" class="form-control" value="{{RollNo}}">
+                </div>
+                <div class="mb-3 col-3">
+                    <label for="exampleInputEmail1" class="form-label">Email </label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{Email}}">
+                </div>
+            </div>
+            <div class="row">
+                <div class="mb-3 col-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" value="{{Password}}">
+                </div>
+                <div class="mb-3 col-3">
+                    <label for="disabledTextInput" class="form-label">Status</label>
+                    <input type="text" id="disabledTextInput" class="form-control" value="{{Status}}">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-5"><button type="submit" class="btn btn-primary">UPDATE</button></div>
+            </div>
+        </form>
+        {{/if}}
+    {{!-- {{/ifEquals}} --}}
+
+    {{#ifEquals tname "Managers"}}
+    {{!-- coulmnArray = ['ID','Name','Email','Password','Del_id']; --}}
+        <form>
+            <div class="mb-3 col-6">
+                <label for="disabledTextInput" class="form-label">ID</label>
+                <input type="text" id="disabledTextInput" class="form-control" value={{rows.ID}} disabled>
+            </div>
+             <div class="mb-3 col-6">
+                <label for="disabledTextInput" class="form-label">NAME</label>
+                <input type="text" id="disabledTextInput" class="form-control" value={{rows.name}}>
+            </div>
+             
+            <div class="mb-3 col-6">
+                <label for="exampleInputEmail1" class="form-label">Email </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value={{rows.email}}>
+            </div>
+            <div class="mb-3 col-6">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" value={{rows.password}}>
+            </div>
+             <div class="mb-3 col-6">
+                <label for="disabledTextInput" class="form-label">Status</label>
+                <input type="text" id="disabledTextInput" class="form-control" value={{this.del_id}}>
+            </div>
+            <div class="mb-3 col-3">
+            <button type="submit" class="btn btn-primary">UPDATE</button>
+            </div>
+        </form>
+    {{/ifEquals}}
+
+    {{#ifEquals tname "Bookings"}}
+    {{!-- coulmnArray = ['Booking ID','Roll No','CheckIn','CheckOut','Mobile Number',
+      'Room_Id','Room Count','Guest Name','Guest Age','Amount','Status']; --}}
+        <form>
+            <div class="row">
+                <div class="mb-3 col-6">
+                    <label for="disabledTextInput" class="form-label">ID</label>
+                    <input type="text" id="disabledTextInput" class="form-control" value='1' disabled>
+                </div>
+                <div class="mb-3 col-6">
+                    <label for="disabledTextInput" class="form-label">RollNo</label>
+                    <input type="text" id="disabledTextInput" class="form-control" value='1' disabled>
+                </div>
+            </div>
+            <div class="row">
+                <div class="mb-3 col-4">
+                    <label for="exampleInputEmail1" class="form-label">Check-in </label>
+                    <input type="datetime" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' disabled>
+                </div>
+                <div class="mb-3 col-4">
+                    <label for="exampleInputEmail1" class="form-label">Check-out </label>
+                    <input type="datetime" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' disabled>
+                </div>
+                <div class="mb-3 col-4">
+                    <label for="exampleInputEmail1" class="form-label">Mobile No</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' disabled>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="mb-3 col-3">
+                    <label for="exampleInputEmail1" class="form-label">Room-Id </label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' >
+                </div>
+                <div class="mb-3 col-3">
+                    <label for="exampleInputEmail1" class="form-label">Room Count </label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' >
+                </div>
+                <div class="mb-3 col-3">
+                    <label for="exampleInputEmail1" class="form-label">Guest Name</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' disabled>
+                </div>
+                 <div class="mb-3 col-3">
+                    <label for="exampleInputEmail1" class="form-label">Guest Age</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' disabled>
+                </div>
+            </div>
+            <div class="row">
+                <div class="mb-3 col-3">
+                    <label for="exampleInputEmail1" class="form-label">Amount</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' >
+                </div>
+                <div class="mb-3 col-3">
+                    <label for="exampleInputEmail1" class="form-label">Status </label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value='1' >
+                </div>
+            </div>
+            <div class="mb-3 col-3">
+            <button type="submit" class="btn btn-primary">UPDATE</button>
+            </div>
+        </form>
+    {{/ifEquals}}
+
+    {{#ifEquals tname "Rooms"}}
+    {{!--  coulmnArray = ['ID','Name','Price','No of Rooms','No Of Guests']; --}}
+        <form>
+            <div class="row">
+                <div class="mb-3 col-6">
+                    <label for="disabledTextInput" class="form-label">ID</label>
+                    <input type="text" id="disabledTextInput" class="form-control" value='1' disabled>
+                </div>
+                <div class="mb-3 col-6">
+                    <label for="disabledTextInput" class="form-label">NAME</label>
+                    <input type="text" id="disabledTextInput" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="mb-3 col-6">
+                    <label for="disabledTextInput" class="form-label">Price</label>
+                    <input type="text" id="disabledTextInput" class="form-control">
+                </div>
+                <div class="mb-3 col-6">
+                    <label for="disabledTextInput" class="form-label">No of rooms</label>
+                    <input type="text" id="disabledTextInput" class="form-control">
+                </div>
+                
+                <div class="mb-3 col-6">
+                    <label for="disabledTextInput" class="form-label">No of Guest</label>
+                    <input type="text" id="disabledTextInput" class="form-control">
+                </div>
+            </div>
+            <div class="mb-3 col-3">
+                <button type="submit" class="btn btn-primary">UPDATE</button>
+            </div>
+        
+        </form>
+    {{/ifEquals}}
+                                                
 </body>
 </html>
