--- a/public/css/main.css
+++ b/public/css/main.css
@@ -226,8 +226,8 @@ a {
 
 /*BOOKING PAGE CSS*/
 
-.container {
+/* .container {
     max-width: 960px;
-  }
+  } */
   
   .lh-condensed { line-height: 1.25; }
